# cc-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh.md  build_exe.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/mem-init/: skill.md
.claude/skills/save-memories/: skill.md
agents/: plan-guardian.md  plan-refiner.md
cc_memory/: __init__.py  auth.py  ccl_backend.py  config.json  consolidate.py  dashboard.py  db.py  extractor.py  installer.py  installer_standalone.py  logger.py  mcp_server.py  mem.py  modes.py  plan.py  post_tool_use.py  pre_compact.py  privacy.py  session_start.py  setup.py  skill_status.md  skill_template.md  stop.py  user_prompt.py  web_viewer.py
cc_memory/cli/: __init__.py  mem.py  plan.py
cc_memory/core/: __init__.py  auth.py  consolidate.py  db.py  encoding_setup.py  extractor.py  idle.py  logger.py  modes.py  plan.py  privacy.py  progress.py
cc_memory/hooks/: __init__.py  consolidate_async.py  post_tool_use.py  pre_compact.py  session_start.py  stop.py  user_prompt.py
cc_memory/llm/: __init__.py  ccl_backend.py  memory_writer.py
cc_memory/mcp/: __init__.py  server.py
cc_memory/ui/: __init__.py  dashboard.py  installer.py  web_viewer.py
commands/: cc-mem.md
docs/: ARCHITECTURE.md  HANDOFF_PROTOCOL.md  I18N.md  MEMORY_RULES.md  PLAN_PROTOCOL.md
hooks/: hooks.json
memory/: .gitignore
skills/ccm-load/: SKILL.md
skills/mem-init/: SKILL.md
skills/mem-status/: SKILL.md
skills/save-memories/: SKILL.md
tests/: smoke_test.py
tools/: i18n_check.py
